helm/installs/from-hub/prometheus-grafana/grafana-ingress-cert.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: grafana-default-headers
  namespace: monitoring
spec:
  headers:
    browserXssFilter: true
    contentTypeNosniff: true
    forceSTSHeader: true
    stsIncludeSubdomains: true
    stsPreload: true
    stsSeconds: 15552000
    customFrameOptionsValue: SAMEORIGIN
    customRequestHeaders:
      X-Forwarded-Proto: https

---

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-ingress-route
  namespace: monitoring
  annotations: 
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`g.markitectos.com`)
      kind: Rule
      services:
        - name: grafana
          port: 80
          sticky:
            cookie:
              httpOnly: true
              name: grafana-sticky-cookie
              secure: true
              sameSite: none
          strategy: RoundRobin
      middlewares:
        - name: grafana-default-headers
  tls:
    secretName: g-markitectos-ssl-secret
